feat: updated the design of project
