# src/api/routes/user.go
@@ -1,46 +1,54 @@
 package routes
 
 import (
+	"github.com/gofiber/fiber/v3"
+
 	"sample/src/api/handler"
 	"sample/src/api/middleware"
+	"sample/src/pkg/base"
+	"sample/src/pkg/dto"
 	"sample/src/pkg/internals/user"
-
-	"github.com/gofiber/fiber/v3"
 )
 
+var userFilterable = []string{"id", "mobile", "national_code", "created_at", "updated_at"}
+
 func UserRouter(app fiber.Router, service user.Service) {
-	// user crud
+	crud := base.Service[dto.UserInfo, dto.UserDetail, dto.CreateUser, dto.UpdateUser](service)
+
 	app.Get(
 		"",
 		middleware.Protected(),
 		middleware.RequirePermission(middleware.ADMIN),
-		handler.GetUsers(service),
+		handler.GetAll(crud, userFilterable),
 	)
+
 	app.Get(
 		"/:id<int>",
 		middleware.Protected(),
 		middleware.RequirePermission(middleware.ADMIN),
-		handler.GetUser(service),
+		handler.GetOne(crud),
 	)
+
 	app.Post(
 		"",
 		middleware.Protected(),
 		middleware.RequirePermission(middleware.ADMIN),
-		handler.CreateUser(service),
+		handler.Create(crud),
 	)
+
 	app.Put(
 		"/:id<int>",
 		middleware.Protected(),
 		middleware.RequirePermission(middleware.ADMIN),
-		handler.UpdateUser(service),
+		handler.Update(crud),
 	)
+
 	app.Delete(
 		"/:id<int>",
 		middleware.Protected(),
 		middleware.RequirePermission(middleware.ADMIN),
-		handler.DeleteUser(service),
+		handler.Delete(crud),
 	)
 
-	// services
 	app.Post("/login", handler.Login(service))
 }
